# TwitterAnalysis

./: README.md  pyproject.toml
data_ingestion/: S3TweetDfIO.py  TwitterBot.py  TwitterConnector.py
notebooks/: data_ingestion.ipynb  data_transformation.ipynb
workflow/: cron_tweet_ingestion.yaml  tweet_ingestion.yaml
